--- a/Investimentos/.dockerignore
+++ b/Investimentos/.dockerignore
@@ -1,12 +1,8 @@
+# .dockerignore para Render - mínimo necessário
 bin/
 obj/
-*.log
 .vs/
 .vscode/
-node_modules/
 .git/
-.gitignore
-README.md
-Dockerfile
-.dockerignore
-*.md
+*.log
+node_modules/
